--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <div class="mainVisual__inner">
              
               <div class="mainVisual__image">
-                  <img src="images/top4.JPEG" alt="top1">
+                  <img src="https://github.com/am10ya/No.13/blob/main/top4.JPEG?raw=true" alt="top1">
 
               </div>
           </div>
