--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>No.13</title>
   <meta name="description" content="am1Blog">
-  <link rel="stylesheet" href="css/common.css">
-  <link rel="stylesheet" href="css/top.css">
+  <link rel="stylesheet" href="common.css">
+  <link rel="stylesheet" href="top.css">
   </head>
 
 
