--- a/index.html
+++ b/index.html
@@ -64,7 +64,13 @@
        
 
   </main>
+<footer>
+    <div class="footer">
+      <p>© All rights reserved by am10ya.</p>
 
+    </div>
+  
+  </footer>
 
   
 </body>
