--- a/food.html
+++ b/food.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>No.13</title>
     <meta name="description" content="am1Blog">
-    <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/food.css">
+    <link rel="stylesheet" href="common.css">
+    <link rel="stylesheet" href="food.css">
 </head>
 
 
@@ -57,7 +57,7 @@
             <li class="foodList__item">
                 <a href="kissayou.html">
                     <div class="foodList__thumb">
-                        <img src="images/kissayou.jpg" alt="喫茶YOU">
+                        <img src="https://lh3.googleusercontent.com/qXlJ0T5K6u6LEuGRStn8LptryOs23C6NDmt1JanWLFRZRsGJnHBY0ALHhh2dhMnsVGRQWYlmxq7BbfmKY-29UO1f2DvzpH_rwBm2fwU28qM3HTp_8enySCrcjgTEG2nBZsGNZ1iL3E7YLCDq0c8tb2mFZOcq-OhRc-NKhvc6GGBzVLdURzZgtVcgOAJKLdiOUOjCd6va1g1lZgoaqgBYVXlDiY2Y_DaMoFKzDiuSq9YUvVr2bZ7Iw7v7HV43RP7JxiUtKjm5GMj9wo5sWzfAzrk3D43ijtYGmfqdGbwSJOnZR4r9gQMuBrMj98MfUsM-qWw7KDf8SUpWCEltga4JwXfUY15FcM5aaP-H5_fYxaL1ZhVXP6ct3nIxOkwwT3QCfc9CfMyyMZcKJ6ISISJ6p7vhzhpeoPFeNkonlJfOBShS_VMieselxmQfa8vMK-Xj3yhwjEIt97ub7CREl5m_5t2nFCgSht8HFjmNKwXSm5iGq2ugJSG6wfu4tcYkPNg4ahYqCciuVOUqsJ_kASJSZCVqqySOYZ7r2PpRsgdrJLiuS8ZVRIXPpeZgsWd4krAynSo8p8tV5DPUSZ-xMOFpuUlNNpBGxQKbTby_aW8T-Xi0atOOc_-_PRYtFx107Y_NoPBbD_nxJJ5XJdO2NJJ7UY6tmoEGDK-61f0LPSfyDL7q92U9QZNOVNYIAt2869XRVwqvT3HlCZUa9J3wKC7FMvUHVQ=s821-no?authuser=0" alt="喫茶YOU">
                     </div>
                     <dl class="foodList__data">
 
@@ -108,7 +108,7 @@
             <li class="foodList__item">
                 <a href="osakakissa.html">
                     <div class="foodList__thumb">
-                        <img src="images/osakakissa.jpg">
+                        <img src="https://lh3.googleusercontent.com/FXxFMYlRRYVx97X6OlZOsTRMXhz6MVSTWRzCiZw_ysNXPJm03wdOOgWUb1OGuIDOorNmkGyRpWyLpdqdUM06zpxlbck6sjdJjMVUq0E4Cq9U-PsbeAiq2Nexoe8XZmSD_52jW0NNIGKrqLdQPtqBX9BWgOnewdK_E56nE-56xmNccgDecliPACZaB7vEA4gm7PvG5z69GyMXeAPFnXULGeMTa1EQCN2m7l0-qXg776KAWdD2J6_SPDNDVST0v_-ZQbs_sv1BRBGAxBjfECstd7PHHjGH98Qd44-Hv22WeHOODh578guErjMhPHQzO7NxLfSUDaRc4-3zSK3Spd1AtZWfiMdwju78o9QmcXppqZTTzrxXazlV1_LCjqgiKvDa-1eOdkfO2CGeB3LILFXpwqErTiQwDO_j-lyrDF_KlsksDWDHaU0i8iZCaNIzgB61P-1SFH9GijdqgXCgzjSIpEy0-ZwYOhKFbe40JWlPbn14X7vqEym5_rXS4fwEQu8g9TNBRe4_z1I3E4YzopQUVCD23T_GVI9n1662LhXG4faVe1okou2YF1piEwmvAeyz5VJHQSdY4kqKvU58hSNCyReIECoLfoIVchn3z_QouIcbDet4KS9vCzGxHmvnqfzoFvSB91ai8xuQgItdTLsWH8klAYpsKyXZ3Gr_afbIrfwjfndkPydax_nxRVT9ZfJ5RUpSpv6tT0c1E4UEaQrm-RflRQ=s822-no?authuser=0">
                     </div>
                     <dl class="foodList__data">
 
@@ -132,7 +132,7 @@
             <li class="foodList__item">
                 <a href="">
                     <div class="foodList__thumb">
-                        <img src="images/saigon.jpg" alt="ミス・サイゴン">
+                        <img src="https://lh3.googleusercontent.com/KOLnIRz1tGfC-fqO5FGbJgRSHJ8hoAnmBOyeT_GC2O9uq9kIIEnCBJrzjNUAgkKpEpjavzRJ9N0WBUgHdIWiD3SSz2n01jdmY2SiNkBquqF8zsRxS3dbg5lJQrxkq9ACRjHXFjjTzwdDsQ5kNY9384UrykdLRrks1U0cpSqca6DivwfBRFZWuUNdlLKvw9A6j_M_KZjVPkOwMvMOVXS_djO6LJXxpUmTCjwUKQGsnDNOAL43HvFE9iuZab9vS1T6KWkV8YaJ9Yld04Ho2nnmWD7U_YsoNSAAbvacTmRlsvH2U62tUmXKzr7RReJshMYstpbSkCmnwJyO2ens6Fyli27IjM0u9CboaB3zp7A-vX49mnL-EtwKETh0zvw_Vvj0HYTzGv2263iHuHgS_FcCRixNu1V65dSLfVOiX0yTU0IEOP0bQNCk8dvd_Ot3Uj8XctpRBxygeff8hMZK9H3Yd_OYw2xTi6dG8Dkh9SSggNrwbBeLChT65epcigvvCnHIPuK08g-WRwNmyAq42nJZ0r4MJ8q9DAQOFZ2r-AcQi8JM2WLjCbkq4uGUCGmbeeFrE2ep01fm-vl1WPj4PCo_oCs1QOZ-K2JkJBuG6oGJP3IZ-2nPW21Wt6F14RacGtGBX62tqwbgZGXLULfLxHcv-OqwQZEVqDzGe1pFnfqPNLJfLLSYPWPGu1Y2dU9br0CuCr__R62Isq3dcxhsbYhdu5HgPQ=s226-no?authuser=0" alt="ミス・サイゴン">
                     </div>
                     <dl class="foodList__data">
 
@@ -156,7 +156,7 @@
             <li class="foodList__item">
                 <a href="">
                     <div class="foodList__thumb">
-                        <img src="images/牛鍋.JPEG" alt="牛鍋">
+                        <img src="https://lh3.googleusercontent.com/j0w8jnj98p-r_PW0CZuwJkEg1hZFvAZLNETb-14iQOvPLY8-isIkzw-PgwMeDjYp2z0aJc42xd48GHWLpFMWI0xBjtPpLehy122zPEP_eJMcWhdeA6M_oqC_Vw5n_utXbXJfo1mA1yXiRvMFceio0AOHk5u25hX2GRT2WlR1nMJx2VCIialITt39sTZW_-uci_1MVWd-a1oPeeYRjKhsVSKDpqPd_zw5-l7S2LZG40XYd-BD8qe_64k6lmvxL7jAE-j5-ioBHh2fGFz9kET68D98TdQ0p74CE22C4pG7BoYwmeKbQM7rgN4B7pr6adPp687KFoH-cavW4bGrkqLC1XgQSvICpAci49z3CRMCY4-kO-FzGpUVUgEd2WY9A85yfygVWeET9CY-1G8RLhgbHiBZrhtgmSBAWphTJ3DOW4IrNkWBI-cwIbsUT9XtsKdfF1mGaHJFtMmxJetYg1nBM1iMahnT_OibOBcsqql_cEDtY5-BVYmQNHWfojOy7B1G6Kq116Ve2dAbnGOkPz7Ckx0W_kFDeHgMbBmC6wx2AbF3-jigyonGJ4PBih0y5BwxVIc_Zfr7fTSnThF2tjkSfe4WwWQutZ9ABcmGWS_UcimqWiXKTQbfzpIK9HMVrA1Ry7140khww1bUE9rW2EC3tYODsZYoJi7jxz6ZFir05G4i7aBsaM0KY78mKmbTHbqjSspCrtOlJyWBOYMcU0At-kZuog=s821-no?authuser=0" alt="牛鍋">
                     </div>
                     <dl class="foodList__data">
 
