--- a/osakakissa.html
+++ b/osakakissa.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>No.13</title>
     <meta name="description" content="am1Blog">
-    <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/foodarticle.css">
+    <link rel="stylesheet" href="common.css">
+    <link rel="stylesheet" href="foodarticle.css">
     <link href="https://fonts.googleapis.com/css?family=M+PLUS+1p" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Sawarabi+Gothic" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" rel="stylesheet">
