--- a/xojeung.html
+++ b/xojeung.html
@@ -7,8 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>xojeung</title>
     <meta name="description" content="xojeung">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/header.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="header.css">
     
 
 
