--- a/food.html
+++ b/food.html
@@ -108,8 +108,7 @@
             <li class="foodList__item">
                 <a href="osakakissa.html">
                     <div class="foodList__thumb">
-                        <img src="https://lh3.googleusercontent.com/FXxFMYlRRYVx97X6OlZOsTRMXhz6MVSTWRzCiZw_ysNXPJm03wdOOgWUb1OGuIDOorNmkGyRpWyLpdqdUM06zpxlbck6sjdJjMVUq0E4Cq9U-PsbeAiq2Nexoe8XZmSD_52jW0NNIGKrqLdQPtqBX9BWgOnewdK_E56nE-56xmNccgDecliPACZaB7vEA4gm7PvG5z69GyMXeAPFnXULGeMTa1EQCN2m7l0-qXg776KAWdD2J6_SPDNDVST0v_-ZQbs_sv1BRBGAxBjfECstd7PHHjGH98Qd44-Hv22WeHOODh578guErjMhPHQzO7NxLfSUDaRc4-3zSK3Spd1AtZWfiMdwju78o9QmcXppqZTTzrxXazlV1_LCjqgiKvDa-1eOdkfO2CGeB3LILFXpwqErTiQwDO_j-lyrDF_KlsksDWDHaU0i8iZCaNIzgB61P-1SFH9GijdqgXCgzjSIpEy0-ZwYOhKFbe40JWlPbn14X7vqEym5_rXS4fwEQu8g9TNBRe4_z1I3E4YzopQUVCD23T_GVI9n1662LhXG4faVe1okou2YF1piEwmvAeyz5VJHQSdY4kqKvU58hSNCyReIECoLfoIVchn3z_QouIcbDet4KS9vCzGxHmvnqfzoFvSB91ai8xuQgItdTLsWH8klAYpsKyXZ3Gr_afbIrfwjfndkPydax_nxRVT9ZfJ5RUpSpv6tT0c1E4UEaQrm-RflRQ=s822-no?authuser=0">
-                    </div>
+                        <img src="https://raw.githubusercontent.com/am10ya/No.13/7e76a991c2ceaf314289d3d9c36d37be26614644/EAB6D226-0A5A-4D03-8D8F-9D6BF7D9D1F2.jpg">              </div>
                     <dl class="foodList__data">
 
                         <dt>大阪喫茶店</dt>
