--- a/osakakissa.html
+++ b/osakakissa.html
@@ -252,8 +252,7 @@
                     <div class="shopname">
                         <h1>喫茶店ジャマイカ</h1>
                     </div>
-                    <img src="https://lh3.googleusercontent.com/SB8b3SVjOkNutrCQnDNO6a4wuVMb9Mhf2mDfcyGPpbwIS2dkYLgT5zm9ntXvbJ6rUTOfxS-VoynbJ5yYRaw1-cwwQ4oe8Iyyt4DZiPnuSL8dlclTHLHyXMLc8s18qegg1lCRP73JU93FghBvpa4A4hTeFrtaiEFspfShWm_RX3MLW0Uef2oWNc2EQLYKff_pw3pF2MrUsk2IDM0Z_IfDXvZTO4awmd-9ljPUyXo_5XFyfLxrETjQL-1rdoZLI3OSqe2fz2YM1V5QKCEooHc9bu_5PKm0Mhb2J13SkG_FNt8W1UJh8u5u0U28A0zaoflrGl_ASrAawqZdBS_w9spaEqYvJ8Wlw318t9zaYfLo2VGk7HhcTOxRuogyggG6eiSAbLL_NQ0HhrPHjmMTTrJIB_wafWCheOVWoWQLbLSGH6cicpHa7RoYUgvl8FsUggHhWMzSVKKeDOJaMdUqKm0Ml7rcOnZqayQc1cW3GShYkJb46EIPiKZNXAnD19NXGyqNADO3l6Unck6c2Pe7ifxYtYEw932I66VWPF1lRfdC93qVUIvGgBHMJzAC2I9bEIli2_YPWEJIuGMpn9RTvM3N2adWVWQesY_p7tWuu8rWJpQP5ItsWlAYWdQYOZ35THRrBpdXKN79zYYseMnXAfAlqJGd0JVHToRdsNmZbbvVGGSsc_xwW0t1HFDe-LTNCNEZBldYmVjphF9tr_m_cwvRh0FBlA=s500-no?authuser=0"
-                      width="300">
+                    <img src="https://github.com/am10ya/No.13/blob/main/osakakissa/IMG_0616.jpg?raw=true" width="300">
                     <div class="detail">
                         <p>
                             クリーム盛り盛り！こぼさず食べれたら100円あげます。
