--- a/osakakissa.html
+++ b/osakakissa.html
@@ -93,7 +93,7 @@
                     <hr class="info">
                     <div class="content__information">
                         <div class="images">
-                            <img src="https://lh3.googleusercontent.com/ACiTFY38uPfYhg_uSJMnsEJZhH9m10W1BzDplDS1kdAFzMZclShTNbVPE2cr6ttQXi1acOsnMapxvjMhEWJWMLpU8K3XXitZYsD7WHOBx5n2RMz2v_5rEylIK--zv_EW-2zeSlX8mf7t6nfB5G6fk3_twy85wceR0aFqK0C0E-cWe-m1Kg2gOuk-ri9fffEhBZadcTuTAWq3mlIqLd6xCC5yckEw0XXh3DfRlTD7u-deVSzP_cqkReyQLCuyQ7FNit6ySXV2vuDATUjW_jC8jVx7unxzMCmZgu6kN4D-R0Njc_ynbaRtSwnA3YZ3czx5nvGqJoaZcp9w35on9uk6KmrQUqPtTvzC_qr_jAgcDB69-vF0svFycoKU0T5-xUQZ_hQChwKTu5M_fv2dDw5N1QpFmHCqGyVT0uJD8QOIBlzhEByaqMzGEcnm0xuKm9dK_qjAyRaL4BsUZiVAPjV9HWxV5UJqxyUHoVMASfM1q0TMwjbDdSJ5zhvs7NYvl5s9jAlxmvjgTyMur1aoMjIXFNz_W1u4LTkozHRdLTw-BZSMbQnScDqJFJcmpHLsdrF-wxmk1Sc2s00UhGoxy2arIqyAXuee-K66HQ6KRmVe2jnHn5Ox8lI76J2ymaafJnv63c936Es67jMoeJ5Rdz0YlaJcXFvxgDPQGtcAQQfUp3B62GNC5q35Hsk56EPwbXX_cVfya_QAcmBAG8X5sIu7gk10bg=s821-no?authuser=0" width="300px">
+                            <img src="https://github.com/am10ya/No.13/blob/main/osakakissa/IMG_2546.JPG?raw=true" width="300px">
                         </div>
                         <div class="information">
                             <b>[Info]</b>
