--- a/osakakissa.html
+++ b/osakakissa.html
@@ -138,8 +138,8 @@
                     <div class="shopname">
                         <h1>喫茶アリサ</h1>
                     </div>
-                    <img src="https://lh3.googleusercontent.com/hLlaGq_XAtrNlAbw-L2nlcrW_NQpiMZSGc3DgOcO1aCuisip6TbChyfX7SjxQedy4cpsSom8hgsvnp000BxqXx8tp6K5Rqprz5CP3rA9WAZZXquS8TrCBEePGi5621wFBNZ6bVhEdc18V-hus2oTMA-OnGC1dYMWcRMRnx9SUaBX_UeERLXRK406bH41Ka637ui646ywtfiLNXGZ6omAt2W0CkGQQVlqobFjOlnXFR8vYQaEu1bX74ooemlF1zu1axB5rCmKCODf-zkTNMi0xsamkVjpPDgULWtD6ooGEdonFcnfUZrJsz6IUBpBOgH3BgPg8eDXZQZivpakq37NlfFxVG47Dyn-2xZXW-xrGfNHqmAU2JfwkuJNp5IsLQ_Mh1giqckOEeGmR-Y5zrdi0l1IQOutYQs2rWoTTr0JjHC1XJF52kyYjSvr6nlJBudnIFm3BV-CG__UqAkdt8me-NYLVv7I8iQJijOBipLwZ5Bim0C2aFMg3oBFP27Rymj3wS_iVrb-3x2lfzhLoLShCJaGU27f7i16SlBaoYzYs1PAhr0w_geNg1CArT7aOyqaX7e4Ozchjn3MOFaK0nlZNVhn418fLL86KUYD7rP73lo4oj1tjdjhj5ZtwiWERvwXToZ1qUUyyANqM1sn0KLmBcgc8cDIjzJNWJJSByMPzKzIA2elJZgHQF7H_8TOKMOWgNNLOkyvU-4YLWfakmhV89emDw=s743-no?authuser=0"
-                        width="300">
+                    <img src="https://github.com/am10ya/No.13/blob/main/osakakissa/DC944E3C-8169-4DC6-85D3-888FF34D584A.JPEG?raw=true"
+width="300">
                     <div class="detail">
                         <p>
                             外観も内装もエレガント！真っ赤な看板が目印。<br />
@@ -149,8 +149,8 @@
                     <hr class="info">
                     <div class="content__information">
                         <div class="images">
-                            <img src="https://lh3.googleusercontent.com/PZcyj1jerss4mJ3SleilquUs2e55_kEsqhmK2oyOEDaIdT1HAaPSwI6MHceXSfE6Gm1Y4lCe0-vtCogerTK4AWJxoCU_kB7XjxDaF3h4LfRKpJNj63GwfnZd0NdObBkWCRq0o6h75Qugg6MYXeoLVDBZZRrUQALj4HPe4slqjrMh-e0qX4mWgWCRDX8E53e-MsnI5SW7mvIoGZZ9Zu2E0depsZmXqGp9J-7Ogy6PpWZILmfu-4oMVr_YFn-0m-7bmM23Dl0LDp-VSTWio_lzfuyBced4PNreOlDdY1IOeot9DMFulep_RITdyCR4P9b7bkZgn-YH5LAJjGknRQoQN1rjzGpQykdlb71syrdBknpkSoC7RVcVFgPH4vEDLqlmeVnRAAcDMVFvDOb326lEaisWCL_qv2QPlzK-3xzcjJOmZ4b-p-eZE8-EimAk9ayidEwBV9z3uP1Zjy3u1dk3STRA8zHi3N_QjMRcvzHzLbc2k9LFy_q9_-owCvBmfvehEow__p-af4gDcOO66jb_gUYGTrFFonPXo8aUkTyugFvPTpKtB3pl-af4uWiH1r-dsJv1CVKmVHOhVMzmaI0RVvJmkJYxQZKYrs8T7kxLdD7akAGm3bhdBTdWTcxn_2_8NFpfkxOq-DV2c-yRkENv9Hoc0jb_ua07os8rR53DdSpLt611QBZX6Iuot1fYIM7A-vO2G2Olu57SwE0BlKhqR8ousg=s500-no?authuser=0"
-                                width="200px">
+                            <img src="https://github.com/am10ya/No.13/blob/main/osakakissa/8F074BE6-3A63-4439-8465-21AB7EF16F91.JPEG?raw=true"
+   width="200px">
                         </div>
                         <div class="information">
                             <b>[Info]</b>
@@ -311,8 +311,7 @@
                     <div class="shopname">
                         <h1>King of Kings</h1>
                     </div>
-                    <img src="https://lh3.googleusercontent.com/svQMQQ7wxSPpEE3hw8I2_x_J42xEx1qSGUjoMNE4oVPTwAH9xPHQZPlsmuH_G9NUz3Kf9rjGO5gRJEz-vBV34E7rTb8mvtsYTirZdBRB3c5JurTF5uIezcMv_G-pFU0TWlNhfcRgiFb81uqzu6TZwDPUiw4TKlmx_7mg6YSTMQZU5ROV1ed2iTIWCdtC9dnOGaqOUi8ZUpFYc6oc_cehdILbKbAd1sfc7b5nHrO6mgVwDC8W_HwTBTHjsl0orKazdrWNf5m2rjbugb4h1SehLFrVbezEV0gGPCOlwYuwlkLpnJjD1kvCkm77-QRvpxXY665Sf3ZkoQUW78SP8ZT5lTg0z8mj9fxi-boY6bAdvu4mT-VT5vVsuBfElaRgt3oHb7KB3XP-LN-6Dsq8GrI7lgQ7ORewZL-hNBhlRLRgx89SI7r9lcFweN4s19YQH6UkYJAYQ_edTeY1jymlguuhKKTG92ETECT3vYRVuzOqa6uBEpNqlivA9rBMq_MZkiL2tvYnEExkrmrTQ78EVv7Tfjf4YyxZNoEWtammPeCmJWRmeXY1PKXHELPMANDZydg3nmzbayFFTLBA54yvn95IrelVHATDq5XfHOfKcJ74ruWN1a-5j2B0e4a9k3L2FRORASP18Zeo__McFu8D4VbqWKYwteu1phbpALSrb--y8VKlC6hBzNi0eMftxiwbFWj0bDEjHxTTY58zSzxDoCFQUnFd-w=s821-no?authuser=0"
-                    width="300">
+                    <img src="https://github.com/am10ya/No.13/blob/main/osakakissa/06EF919D-D972-46B8-B9E6-C15790819E2B.JPEG?raw=true"   width="300">
                     <div class="detail">
                         <p>
                             ギラギラのステンドグラスが綺麗で
@@ -323,8 +322,7 @@
                     <hr class="info">
                     <div class="content__information">
                         <div class="images">
-                            <img src="https://lh3.googleusercontent.com/aX4pjwFAsSvE_wrTuXvlOUxql2UBPHRUBeMiAkmKD6tIyx-9nrjRCJ2s7rG-blIfJPam35MJXECUBsm6F9W_bS6kDzWneJplk5wMcWbhzjc_-VsUBiZO_1Z0Mo7tbomcDBVocSGjStfExhZnwa1zqMR9w5dJ1p79Dy3w56SkELSuPCpKxUXtS71i951GnlyAOzESqgSXITste2xb9kh4TM9s4BpETOFgdv7hXyNmLT4dNF2vVntkLxxmcASLcsQ1viuWluwtBRIyaDDjLwqbsMkvRQJw3r1kSQBzMYuzbUCZAJfLSr92qOlu1ROohzziL7SKxaMsFlgXz5FF78NPXCJmzq9deWD6iY6D3qJESB_PW4-RJvYncOYcwlO4Q22eNptYOWyHeWj7Dz5e02J6RaMrktqvBhPLoHq4MShdm_UT9yNVGdPSGepRhpiaC7byefRpeVm-RPK-GyqehE4v8iP_6ZikabpmDTUHC4mRyxioQfgy9SPbDh1dXlf5IzZjzMTRisnbOAhW6TMXCyRGCLpVseFkebORHDJerJ8eUvk9OiVPYD5FpTonz8dMtlP10bL_ycQRRvZ5WG4ToLYt8ibRfxzmmZGMMBZig4mXt0SOWy4oEeVN01Ru1x4ilxx6aBj2JxfZ81OP0YTSo0Gc9lVrktsGxbtXT65IF2h5-1rEUrmb7gZv56q_oeGioJTrtBBNvphEGS8TPvbiNht-nR36DA=s328-no?authuser=0"
-                            width="300">
+                            <img src="https://github.com/am10ya/No.13/blob/main/osakakissa/A63D2FD0-A6DE-427A-80C1-B2AE00A00A50.JPEG?raw=true" width="300">
                         </div>
                         <div class="information">
                             <b>[Info]</b>
