--- a/osakakissa.html
+++ b/osakakissa.html
@@ -83,7 +83,7 @@
                     <div class="shopname">
                         <h1>喫茶ドリヤード</h1>
                     </div>
-                    <img src="https://lh3.googleusercontent.com/CvvGs8pkQVktXaihtXfZhtTplyfahYiFkh79W_1PF5xKmDMuLxXKW7tmDJe5C1YBBYmj5CWodW7FbCY1zES7KMNSBiQQC7hkOuUBL-CwOPyaEK6rxJsWlZmnbwUDtroxThy9VVukJd2bRh3FxbEpmA51OEHdhX0xljQkpIIHJyLCipfNuXeYFjFt3IaPVWtYsa0iKXFmO-54K3OjVCVSPxA-4MRm9Fypcl0OpRRInXzYMZP_u1WHZc6pHchT5iz30k6etTD74gBvvOa9IlcYokd-NeWNTtuVFn5ZNvoUwLV62Dy-OR2NRhj5tlAwWl7tCYaUGzQ05VXLeHohOwtUuF8V3ucMzXdqrxsklYuTA7fVHagjEI-Xqzfr31iARfY5FnvxY1KOHIEroXR0bSeM7f_TTLqNirtU9tCwwIeEQstlL4MgTcxmVZZ-GnOmtWnQxgGXkZgMqyv5nrjVpB6iS4ujX2zxmIER92d0BlfPYmdCSp9Z0faYdXDN4iwRJqCRyc6ulST7YuQQqkFeYnY4uWiWCOkramfdCBLGNl93jMEw7HTczZ7AwrOM7wruvCMWo1tzAKS77RfRqRibM9-zpN6cNrvGBa0IhZGGxFmqmc5uNdFrsceDQV5kJb-xKfwt2LgxEa7h4jqZfuI92QsWMSlqOEW1-4q9OJcpzlD-hTpGzPfY7mgpjdr7_8Pg0c4qEYQXa8c4UdEqs19ThtCdfvgphw=s500-no?authuser=0" width="300">
+                    <img src="https://github.com/am10ya/No.13/blob/main/osakakissa/IMG_2546.JPG?raw=true" width="300">
                     <div class="detail">
                         <p>
                             フワフワ〜ジュワァなコロコロフレンチトーストが名物。チェリーもついてきちゃってまぁ素敵。<br />
@@ -93,7 +93,7 @@
                     <hr class="info">
                     <div class="content__information">
                         <div class="images">
-                            <img src="https://github.com/am10ya/No.13/blob/main/osakakissa/IMG_2546.JPG?raw=true" width="300px">
+                            <img src="" width="300px">
                         </div>
                         <div class="information">
                             <b>[Info]</b>
