--- a/osakakissa.html
+++ b/osakakissa.html
@@ -93,7 +93,7 @@
                     <hr class="info">
                     <div class="content__information">
                         <div class="images">
-                            <img src="" width="300px">
+                            <img src="https://github.com/am10ya/No.13/blob/main/B737F333-DE2A-4C43-821C-90B23AC12E97.JPEG?raw=true" width="300px">
                         </div>
                         <div class="information">
                             <b>[Info]</b>
@@ -195,8 +195,8 @@ width="300">
                     <div class="shopname">
                         <h1>珈琲の森</h1>
                     </div>
-                    <img src="https://lh3.googleusercontent.com/aJlMXmDp2fhHU3LoRDb1RWfUIqdZ7awCeU_RefaMRQ6Pb5TfWXebMQ2gBfzZzmSUv_iW5T9E8OUKe2ELbRcKvaRTsYdhSFWI8hHdrgbIqNBa1rE7IPFmanQL6VCTpfRK3z-LEGpU-10PMsUu0RSdzWJ4pS-zaS9R7R6A0SFTOsLp9zrc3B8thmA9n8GnTSK0q7zOsamEHXtbOa5Ot6v3gr4ROVvU_QhoceENpiwHM9C-Lzcb3OPQtu4IUXffBB5OClYezJBApfU08hS88Zi9HW5RjaA8Au7J9wq0WUtYLQxnWWesn769-gg8gomUVYOV1qYNGX9pFvXbxdjSeJOGmAzTGwZ3BCwMzIUF1V7MjJb4zbV8RcjoDd670DAIQlcZbTmY2Eyl4I9r7rY3FOKpNqSYCIToG7BLM8VvnsOVGYwgR-EMsK--26kjnpo2kd6SzFC6EEAboD28oxt-_el-W1ZI7sDcyJSBpOk1Lwa1gH6D70ncYgh7jLfxvoFBecEkZynT8lVumHEqkyJmHXlRULjWmzEiE5wduCe955MecF_nH5zmW7VqyUdXH5RUZ5VzDfG8dFU2NqP27ftrszEuNh7tc-eJSPvulfqV-nRJA7oCvRX50jZLCZcwvVYymvKdW4FqUsC2RB4Pu0jxTDhz8YbFh1wAYcTQQ50cJvcjX-HbgZ5_9sq8xaC_9U1XJlRTwyM2l-gyllaXI_gpvcxuo_ZWuQ=s500-no?authuser=0"
-                        width="300">
+                    <img src="https://github.com/am10ya/No.13/blob/main/21369A57-B33D-43D6-80B0-09D8598DDD87.JPEG?raw=true"
+  width="300">
                     <div class="detail">
                         <p>
                             ボリューム満点のミックスサンド。一人で食べたら後悔します。
@@ -206,8 +206,7 @@ width="300">
                     <hr class="info">
                     <div class="content__information">
                         <div class="images">
-                            <img src="https://lh3.googleusercontent.com/KU9QetqQztmZaiTx_8gOZvW0EkwA8WL20TdLc4UmqGxkZ3Nequf5rKig9gbw-dcMS7iMdA2e4ygl1kKg6k-uAtbCfUP_i832b6G58iMHslekJxkrxcFN0tYAi2SjjJxH-qaq33oN4D35KsLsXXcy9Rtn9J_ZiwSHZe0L50RaS5THan8G8ci6E0NyXxLZUvQJa0CQA616cJnT-2gfcQKfL-1BkMF3NINhMiWA7ugQ1wpZNTWswMTZe1p4Rf9ymp13bQrdSgNb8d8sxj5GtGF6SNPwAW28K3OZuv9_dlbrFhYotVt87s5-Ah9uxNq5LlnXBxaC0fmiZL7Cr_stvkiJHrY3yBHrfKc2cPNM9APZgZRK-jheSSseMUvTRzV2BHdGO-PFKqG8Ix6rjKBp9w3KRpomySH2PslCJ6tfzfCSUaJwX5u8-fxY-S7nMHUe7lhZL3moPytAolj2h6Y3CnXaVVhfYI15AWWopBMvewjeLoGK8hv78IX4LyTQXz7ojsWItiiIif2jwNNBxLn8_ng87JtS1oH_eMl1F5KSHmpyzVUQKHRNcmivArL5-PxtAmaY8jCBaaWnRpzQhfD29VX56UoOFvDd0tcm0etGJANrn8nTljuIberb4Xn9sr9cfyM6ry93qQ4RjsklOdaJjhMLo2kF2I0xXNXQbqZnwxziBssf36hBLtkRAjJz65259JSW1tr7jF9kqSB43m-l6f0DUExiCg=s500-no?authuser=0"
-                                width="200">
+                            <img src="https://github.com/am10ya/No.13/blob/main/F2BC7244-5C19-41BD-84A2-B181DEAE5FCB.JPEG?raw=true" width="200">
                         </div>
                         <div class="information">
                             <b>[Info]</b>
@@ -262,8 +261,7 @@ width="300">
                     <hr class="info">
                     <div class="content__information">
                         <div class="images">
-                            <img src="https://lh3.googleusercontent.com/yWqQkZyzTKs-xclWbqXX5qp-3HBgIk_wfNsCxqyN9fnEx3bNEluawinP-7F0Ufo4tGbSFYvykky8OgeVM286BFqtW50QCkr67GcwPvyfhH5oDfMUhH2RCRbf21bRTupFDPXZzfPRNYkd8zMBOHYXAzcjni74djSkMDae1CnUagY5IwulZHBHCc--Qfxn_U8XYF81psUSoU3TX8e29OyGT_rQt99TnHc_KL4g1SAXp8db3kEuXu8He9HUTjFY3ZnNhh7wZR-SLUIW9KaWcj7ZmyKcxdKGODWE6T-kUP7uNJY2iZs3KQu05px4TxHNDeAsocjGrULy_Mfp2OBIUBZQD1TGqXv96BTmqe2Nm00QnXG0Fh_obYlJ2q4QUs1k6hu7v6VgyzMts-2fKR8ZkdDtEsOhbeDStj9EbC_L-bOk2KNWXHYwpjYIr2_LaDHV0Uoy3dEQhmWrq9-hgwlcO2MogQ3nb3FPpBo73m_N_KDRSQHNmuBLGcXBy5qzsZzvL_HBEPF6USB8kIdve-nKd4psK2VNugiKlzdQdOSyV2_KB_vMH4jOdLdecTGpFw5cysK2jIK-xY00nHr1e2YOyPXH4AmEEofhhj5wfl3uQi6xIz466Ku2lAiJ6qI_M9t_No5LeD5LAoXILgpDMuZjZ6wyMseEjYcS3ywIaoY-Oz9vGWmNOjLf--JH6xL1sGo_4ktzTCtRgIJHYBMpZJAedJUAKXXvSw=s500-no?authuser=0" 
-                            width="300">
+                            <img src="https://github.com/am10ya/No.13/blob/main/D6350FD7-3434-48D7-9918-72F8675CB0E0.JPEG?raw=true"    width="300">
                         </div>
                         <div class="information">
                             <b>[Info]</b>
@@ -311,7 +309,7 @@ width="300">
                     <div class="shopname">
                         <h1>King of Kings</h1>
                     </div>
-                    <img src="https://github.com/am10ya/No.13/blob/main/osakakissa/06EF919D-D972-46B8-B9E6-C15790819E2B.JPEG?raw=true"   width="300">
+                     <img src="https://github.com/am10ya/No.13/blob/main/osakakissa/A63D2FD0-A6DE-427A-80C1-B2AE00A00A50.JPEG?raw=true" width="300">
                     <div class="detail">
                         <p>
                             ギラギラのステンドグラスが綺麗で
@@ -322,7 +320,8 @@ width="300">
                     <hr class="info">
                     <div class="content__information">
                         <div class="images">
-                            <img src="https://github.com/am10ya/No.13/blob/main/osakakissa/A63D2FD0-A6DE-427A-80C1-B2AE00A00A50.JPEG?raw=true" width="300">
+                             <img src="https://github.com/am10ya/No.13/blob/main/osakakissa/06EF919D-D972-46B8-B9E6-C15790819E2B.JPEG?raw=true"   width="300">
+                           
                         </div>
                         <div class="information">
                             <b>[Info]</b>
