--- a/osakakissa.html
+++ b/osakakissa.html
@@ -69,7 +69,7 @@
             </div>
             <div class="content__main">
                 <div class="content__visual">
-                    <img src="https://raw.githubusercontent.com/am10ya/No.13/7e76a991c2ceaf314289d3d9c36d37be26614644/EAB6D226-0A5A-4D03-8D8F-9D6BF7D9D1F2.jpg">
+                    <img src="https://raw.githubusercontent.com/am10ya/No.13/7e76a991c2ceaf314289d3d9c36d37be26614644/EAB6D226-0A5A-4D03-8D8F-9D6BF7D9D1F2.jpg" width="100%">
                 </div>
                 <div class="content__text">
                     <b>ディープな大阪の喫茶店まとめ。<br />
