--- a/osakakissa.html
+++ b/osakakissa.html
@@ -83,7 +83,7 @@
                     <div class="shopname">
                         <h1>喫茶ドリヤード</h1>
                     </div>
-                    <img src="https://github.com/am10ya/No.13/blob/main/osakakissa/IMG_2546.JPG?raw=true" width="300">
+                    <img src="https://github.com/am10ya/No.13/blob/main/osakakissa/IMG_2546.JPG?raw=true" width="60%">
                     <div class="detail">
                         <p>
                             フワフワ〜ジュワァなコロコロフレンチトーストが名物。チェリーもついてきちゃってまぁ素敵。<br />
@@ -93,7 +93,7 @@
                     <hr class="info">
                     <div class="content__information">
                         <div class="images">
-                            <img src="https://github.com/am10ya/No.13/blob/main/B737F333-DE2A-4C43-821C-90B23AC12E97.JPEG?raw=true" width="300px">
+                            <img src="https://github.com/am10ya/No.13/blob/main/B737F333-DE2A-4C43-821C-90B23AC12E97.JPEG?raw=true" width="90%">
                         </div>
                         <div class="information">
                             <b>[Info]</b>
@@ -138,8 +138,8 @@
                     <div class="shopname">
                         <h1>喫茶アリサ</h1>
                     </div>
-                    <img src="https://github.com/am10ya/No.13/blob/main/osakakissa/DC944E3C-8169-4DC6-85D3-888FF34D584A.JPEG?raw=true"
-width="300">
+                    <img src="https://github.com/am10ya/No.13/blob/main/osakakissa/DC944E3C-8169-4DC6-85D3-888FF34D584A.JPEG?raw=true" 
+width="60%">
                     <div class="detail">
                         <p>
                             外観も内装もエレガント！真っ赤な看板が目印。<br />
@@ -150,7 +150,7 @@ width="300">
                     <div class="content__information">
                         <div class="images">
                             <img src="https://github.com/am10ya/No.13/blob/main/osakakissa/8F074BE6-3A63-4439-8465-21AB7EF16F91.JPEG?raw=true"
-   width="200px">
+   width="90%">
                         </div>
                         <div class="information">
                             <b>[Info]</b>
@@ -196,7 +196,7 @@ width="300">
                         <h1>珈琲の森</h1>
                     </div>
                     <img src="https://github.com/am10ya/No.13/blob/main/21369A57-B33D-43D6-80B0-09D8598DDD87.JPEG?raw=true"
-  width="300">
+  width="60%">
                     <div class="detail">
                         <p>
                             ボリューム満点のミックスサンド。一人で食べたら後悔します。
@@ -206,7 +206,7 @@ width="300">
                     <hr class="info">
                     <div class="content__information">
                         <div class="images">
-                            <img src="https://github.com/am10ya/No.13/blob/main/F2BC7244-5C19-41BD-84A2-B181DEAE5FCB.JPEG?raw=true" width="200">
+                            <img src="https://github.com/am10ya/No.13/blob/main/F2BC7244-5C19-41BD-84A2-B181DEAE5FCB.JPEG?raw=true" width="90%">
                         </div>
                         <div class="information">
                             <b>[Info]</b>
@@ -251,7 +251,7 @@ width="300">
                     <div class="shopname">
                         <h1>喫茶店ジャマイカ</h1>
                     </div>
-                    <img src="https://github.com/am10ya/No.13/blob/main/osakakissa/IMG_0616.jpg?raw=true" width="300">
+                    <img src="https://github.com/am10ya/No.13/blob/main/osakakissa/IMG_0616.jpg?raw=true" width="60%">
                     <div class="detail">
                         <p>
                             クリーム盛り盛り！こぼさず食べれたら100円あげます。
@@ -261,7 +261,8 @@ width="300">
                     <hr class="info">
                     <div class="content__information">
                         <div class="images">
-                            <img src="https://github.com/am10ya/No.13/blob/main/D6350FD7-3434-48D7-9918-72F8675CB0E0.JPEG?raw=true"    width="300">
+                            <img src="https://github.com/am10ya/No.13/blob/main/D6350FD7-3434-48D7-9918-72F8675CB0E0.JPEG?raw=true"    width="90%">
+                                                                                                                                                  
                         </div>
                         <div class="information">
                             <b>[Info]</b>
@@ -309,7 +310,7 @@ width="300">
                     <div class="shopname">
                         <h1>King of Kings</h1>
                     </div>
-                     <img src="https://github.com/am10ya/No.13/blob/main/osakakissa/A63D2FD0-A6DE-427A-80C1-B2AE00A00A50.JPEG?raw=true" width="300">
+                     <img src="https://github.com/am10ya/No.13/blob/main/osakakissa/A63D2FD0-A6DE-427A-80C1-B2AE00A00A50.JPEG?raw=true" width="60%">
                     <div class="detail">
                         <p>
                             ギラギラのステンドグラスが綺麗で
@@ -320,7 +321,7 @@ width="300">
                     <hr class="info">
                     <div class="content__information">
                         <div class="images">
-                             <img src="https://github.com/am10ya/No.13/blob/main/osakakissa/06EF919D-D972-46B8-B9E6-C15790819E2B.JPEG?raw=true"   width="300">
+                             <img src="https://github.com/am10ya/No.13/blob/main/osakakissa/06EF919D-D972-46B8-B9E6-C15790819E2B.JPEG?raw=true"   width="90%">
                            
                         </div>
                         <div class="information">
