--- a/osakakissa.html
+++ b/osakakissa.html
@@ -366,7 +366,7 @@
                                     <a href="https://tabelog.com/osaka/A2701/A270101/27043454/">
                                         <i class="fas fa-info-circle fa-2x"></i>
                                     </a>
-                      Ï          <div class="icon2">
+                              <div class="icon2">
                                     <a href="https://goo.gl/maps/j73a7B93FRHuc7vP7">
                                         <i class="fas fa-map fa-2x"></i>
                                     </a>
