--- a/kissa.html
+++ b/kissa.html
@@ -111,7 +111,7 @@
 
 
              <li class="foodList__item">
-                <a href="xojeung.html">
+                <a href="">
                     <div class="foodList__thumb">
                         <img src="https://raw.githubusercontent.com/am10ya/No.13/62dc5e219814b845a4e68b460a50277764605270/B97EDFE5-A3EE-4510-BA53-6D7856310994.JPEG"> </div>
                     <dl class="foodList__data">
@@ -134,7 +134,7 @@
             </li>
 
             <li class="foodList__item">
-                <a href="kissayou.html">
+                <a href="">
                     <div class="foodList__thumb">
                         <img src="https://github.com/am10ya/No.13/blob/main/F53E01EF-762E-4933-9150-1EB4EB102DA5.jpg?raw=true">
                       </div>
