--- a/kissa.html
+++ b/kissa.html
@@ -9,6 +9,7 @@
     <meta name="description" content="am1Blog">
     <link rel="stylesheet" href="common.css">
     <link rel="stylesheet" href="tokusyu.css">
+      <link href="https://fonts.googleapis.com/css?family=Sawarabi+Gothic" rel="stylesheet">
 </head>
 
 
