--- a/food.html
+++ b/food.html
@@ -29,7 +29,7 @@
             <!-- メニュー -->
             <nav class="nav_content">
                 <ul class="nav_list">
-                    <li class="nav_item"><a href="top.html">TOP</a></li>
+                    <li class="nav_item"><a href="index.html">TOP</a></li>
                     <li class="nav_item"><a href="food.html">FOOD</a></li>
                     <li class="nav_item"><a href="room.html">ROOM</a></li>
                     <li class="nav_item"><a href="">COOK</a></li>
