--- a/xojeung.html
+++ b/xojeung.html
@@ -33,12 +33,12 @@
             <!-- メニュー -->
             <nav class="nav_content">
                 <ul class="nav_list">
-                    <li class="nav_item"><a href="top.html">TOP</a></li>
-                    <li class="nav_item"><a href="food.html">FOOD</a></li>
-                    <li class="nav_item"><a href="room.html">ROOM</a></li>
-                    <li class="nav_item"><a href="">COOK</a></li>
-                    <li class="nav_item"><a href="">VISIT</a></li>
-                    <li class="nav_item"><a href="">OTHERS</a></li>
+            <li class="nav_item"><a href="index.ml">TOP</a></li>
+            <li class="nav_item"><a href="food.html">FOOD</a></li>
+            <li class="nav_item"><a href="room.html">ROOM</a></li>
+            <li class="nav_item"><a href="kissa.html">KISSA</a></li>
+            <li class="nav_item"><a href="">WATCH</a></li>
+            <li class="nav_item"><a href="">OSANPO</a></li>
 
 
                 </ul>
