--- a/kissa.html
+++ b/kissa.html
@@ -121,7 +121,7 @@
 
 
              <li class="foodList__item">
-                <a href="">
+                <a href="kyotokissa.html">
                     <div class="foodList__thumb">
                         <img src="https://raw.githubusercontent.com/am10ya/No.13/62dc5e219814b845a4e68b460a50277764605270/B97EDFE5-A3EE-4510-BA53-6D7856310994.JPEG"> </div>
                     <dl class="foodList__data">
