--- a/osakakissa.html
+++ b/osakakissa.html
@@ -708,7 +708,7 @@
                 <div class="memo">
                     memo<i class="fas fa-laptop"></i>
                     <p>
-                        余白などの細かいレイアウト調節が大変。メディアクエリでデスクトップ対応させたがもっとカッコよくしたい。
+                        余白などの細かいレイアウト調節が大変。
                         アイコンを埋め込むにはiクラスを使用。親要素からはみ出してしまうので画像はdivで囲んでサイズは％で指定した方が良い。<br />
                         font-family: "Sawarabi Gothic";
                         overflow-x: hidden;←横スクロールを隠すcss
