--- a/kissa.html
+++ b/kissa.html
@@ -76,7 +76,7 @@
                   大阪・京都・東京のおすすめ喫茶店まとめてみたよ。 <br/> 
                 </p>
                 <p>
-               大阪の情報めちゃ多いな。
+               大阪の情報多め。
    
 
                 </p>
