--- a/index.html
+++ b/index.html
@@ -28,12 +28,13 @@
         <!-- メニュー -->
         <nav class="nav_content">
           <ul class="nav_list">
-            <li class="nav_item"><a href="index.ml">TOP</a></li>
+            <li class="nav_item"><a href="index.html">TOP</a></li>
             <li class="nav_item"><a href="food.html">FOOD</a></li>
             <li class="nav_item"><a href="room.html">ROOM</a></li>
             <li class="nav_item"><a href="kissa.html">KISSA</a></li>
             <li class="nav_item"><a href="">WATCH</a></li>
             <li class="nav_item"><a href="">OSANPO</a></li>
+              <li class="nav_item"><a href="sneaker.html">SNEAKER</a></li>
             
           
           </ul>
