--- a/sneaker.html
+++ b/sneaker.html
@@ -81,7 +81,11 @@
             </div>
             <div class="text">
 
-                <p>遊びに行く時も会社に行く時も毎日履いてるスニーカー。デカめのNが可愛い。ソール厚めで歩きやすくてどこまでも行けちゃう。</p>
+                <p>遊びに行く時も会社に行く時も毎日履いてるスニーカー。<br />
+                    デカめのNが可愛い。ソール厚めで歩きやすいからどこまでも行けちゃう。
+                    超お気に入り。
+
+                </p>
 
 
 
@@ -95,7 +99,7 @@
         <div class="image2">
             <div class="scroll-animation fadein">
                 <span>The <br />Intelligence<br /> Choice</span>
-            
+
 
             </div>
             <img
@@ -105,17 +109,18 @@
 
 
         <div class="text">
-            <p>高校の時ニューバランス流行ってたけどうちの高校だけ？5年遅れでやっとゲットした。全く詳しくないけど、NBって数字ついてたらなんか良いことあるらしいな。</p>
+            <p>全く詳しくないけど、NBって数字ついてたらなんか良いことあるらしいな。<br />
+                "The Intelligence Choice" 『賢い選択』ってタグに書いててうれしくなる。</p>
 
         </div>
 
-        <div class="title">
+        <div class="scroll-animation fadein-left">
             <h1>
-                Code
+                '80s meets '90s
             </h1>
         </div>
 
-        <div class="image3">
+        <div class="scroll-animation fadein">
             <img
                 src="https://github.com/am10ya/No.13/blob/main/%E3%82%B9%E3%83%8B%E3%83%BC%E3%82%AB%E3%83%BC/%E3%82%B9%E3%83%8B%E3%83%BC%E3%82%AB%E3%83%BC%EF%BC%92.JPEG?raw=true">
 
@@ -124,23 +129,35 @@
 
 
         <div class="text">
-            <p>初めは防水スプレーまで振って大事に履いてたのに。最近コーヒーこぼして汚れた。悲しい。洗おう。</p>
+            <p>初めは防水スプレーまで振って大事に履いてたのに最近コーヒーこぼして汚れた。悲しい。グレーって何にでも合わせられるな、可愛い。</p>
 
         </div>
 
-        <div class="title">
+        <div class="scroll-animation fadein-left">
             <h1>
-                Visual
+                Gray Day
             </h1>
         </div>
 
-        <div class="image4">
+        <div class="scroll-animation fadein">
             <img
-                src="https://github.com/am10ya/No.13/blob/main/%E3%82%B9%E3%83%8B%E3%83%BC%E3%82%AB%E3%83%BC/%E3%82%B9%E3%83%8B%E3%83%BC%E3%82%AB%E3%83%BC%EF%BC%94.JPEG?raw=true">
+                src="https://github.com/am10ya/No.13/blob/main/%E3%82%B9%E3%83%8B%E3%83%BC%E3%82%AB%E3%83%BC/%E3%82%B9%E3%83%8B%E3%83%BC%E3%82%AB%E3%83%BC4%E2%88%92%EF%BC%91.JPEG?raw=true">
+        </div>
+
+        <div class="memo">
+       
+            <p> memo:<br/>
+                cssアニメーションを使って動きをつけてみた。
+            </p>
+
+
         </div>
 
 
-        <div class="scroll-animation fadein">What is your favorite?</div>
+
+
+
+
 
 
 
