--- a/sneaker.html
+++ b/sneaker.html
@@ -53,13 +53,15 @@
             <!-- メニュー -->
             <nav class="nav_content">
                 <ul class="nav_list">
-                    <li class="nav_item"><a href="top.html">TOP</a></li>
-                    <li class="nav_item"><a href="food.html">FOOD</a></li>
-                    <li class="nav_item"><a href="room.html">ROOM</a></li>
-                    <li class="nav_item"><a href="">COOK</a></li>
-                    <li class="nav_item"><a href="film.html">FILM</a></li>
-                    <li class="nav_item"><a href="">OSANPO</a></li>
-
+                    
+                    <li class="nav_item"><a href="index.html">TOP</a></li>
+            <li class="nav_item"><a href="food.html">FOOD</a></li>
+            <li class="nav_item"><a href="room.html">ROOM</a></li>
+            <li class="nav_item"><a href="kissa.html">KISSA</a></li>
+            <li class="nav_item"><a href="">WATCH</a></li>
+            <li class="nav_item"><a href="">OSANPO</a></li>
+              <li class="nav_item"><a href="sneaker.html">SNEAKER</a></li>
+            
 
                 </ul>
             </nav>
