--- a/osanpo.html
+++ b/osanpo.html
@@ -7,9 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>No.13</title>
     <meta name="description" content="am1Blog">
-    <link rel="stylesheet" href="css/common.css">
-    <link rel="stylesheet" href="css/category.css">
-    <link rel="stylesheet" href="css/osanpo.css">
+    <link rel="stylesheet" href="common.css">
+    <link rel="stylesheet" href="category.css">
+    <link rel="stylesheet" href="osanpo.css">
     <link href="https://fonts.googleapis.com/css?family=Sawarabi+Gothic" rel="stylesheet">
 
 
