--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <li class="nav_item"><a href="room.html">ROOM</a></li>
             <li class="nav_item"><a href="kissa.html">KISSA</a></li>
             <li class="nav_item"><a href="">WATCH</a></li>
-            <li class="nav_item"><a href="">OSANPO</a></li>
+            <li class="nav_item"><a href="osanpo.html">OSANPO</a></li>
               <li class="nav_item"><a href="sneaker.html">SNEAKER</a></li>
             
           
