--- a/ebisu.html
+++ b/ebisu.html
@@ -69,7 +69,7 @@
 
         <div class="content__main">
             <div class="content__visual">
-                <img src="https://github.com/am10ya/No.13/blob/main/osanpo/evM8V.jpg?raw=true">
+                <img src="https://github.com/am10ya/No.13/blob/main/%E6%81%B5%E6%AF%94%E5%AF%BF/IMG_3169_2.jpg?raw=true">
             </div>
 
             <div class="content_info">
@@ -176,8 +176,7 @@
                         <img src="https://github.com/am10ya/No.13/blob/main/%E6%81%B5%E6%AF%94%E5%AF%BF/IMG_3170.jpg?raw=true">
                     </div>
                     <div class="image">
-                        <img src="https://github.com/am10ya/No.13/blob/main/%E6%81%B5%E6%AF%94%E5%AF%BF/IMG_3169.jpg?raw=true"
-                            width="90%">
+                        <img src="https://github.com/am10ya/No.13/blob/main/%E6%81%B5%E6%AF%94%E5%AF%BF/IMG_3169_2.jpg?raw=true">
                     </div>
                     <div class="image">
                         <img
